Crud Entidade e EntidadeMaster Ok

--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Details.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Details.cshtml
@@ -131,11 +131,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoEntidadeId)
+            @Html.DisplayNameFor(model => model.EntidadeTiposId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TipoEntidadeId)
+            @Html.DisplayFor(model => model.EntidadeTipos.Descricao)
         </dd>
 
         <dt>
