--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Edit.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Edit.cshtml
@@ -140,7 +140,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EntidadeTiposId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TipoEntidadeId", String.Empty)
+                @Html.DropDownList("EntidadeTiposId", String.Empty)
                 @Html.ValidationMessageFor(model => model.EntidadeTiposId, "", new { @class = "text-danger" })
             </div>
         </div>
